src/main/java/com/example/DiplomaSite/error/ReviewValidationException.java
package com.example.DiplomaSite.error;

public class ReviewValidationException extends RuntimeException{
    public ReviewValidationException(String message) {
        super(message);
    }
}
